# ctgov-search-strategies

./: .env.example  .gitignore  ALL_POSSIBLE_STRATEGIES.md  BENCHMARK_REPORT_v2.md  CHANGELOG.md  COCHRANE_CENTRAL_COMPARISON.md  COMPLETE_DOCUMENTATION.md  CONTRIBUTING.md  CTGov-Integrity-Suite-v4.html  CTGov-Search-Complete.html  CTGov-Strategy-Tester-v2.html  CTGov-Strategy-Tester-v3-TruthCert.html  Dockerfile  E156-PROTOCOL.md  EDITORIAL_REVIEW.md  ESC_SEARCH_STRATEGY.md  FINAL_PUBLICATION_READY_REPORT.md  FINAL_STRATEGY_GUIDE.md  FUTURE_IMPROVEMENTS.md  HONEST_FINDINGS.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_95_PERCENT.md  IMPROVEMENT_PLAN_V3.md  IMPROVEMENT_PLAN_V4_ENHANCED.md  LARGE_SCALE_VALIDATION_ANALYSIS.md  LICENSE  LITERATURE_COMPARISON.md  MANUSCRIPT_DRAFT.md  METHODOLOGY_NOTES.md  Makefile  OSF_PREREGISTRATION.md  PROJECT_PLAN.md  PUBLICATION_ANALYSIS.md  README.md  RIGOROUS_VALIDATION_PROTOCOL.md  RSM_EDITORIAL_REVIEW_2026.md  STRATEGY_COMPARISON_RESULTS.md  __init__.py  aact_debug.py  (+40 more)
.github/workflows/: ci.yml
R/: ctgov_search.R
data/: cochrane_gold_standard.json  cochrane_nct_ids.csv  cochrane_studies_full.csv  condition_synonyms.json  enhanced_drug_synonyms.json  enhanced_gold_standard.csv  enhanced_gold_standard.json  gold_standard.csv  gold_standard.json  nct_ids_list.txt  review_conditions.csv  review_extraction_summary.csv  reviews_summary.csv  sample_reviews.csv  test_reviews.csv  unique_studies.csv
docs/: decision-flowchart.html  index.md  protocol.md  strategies.md  validation.md
docs/api/: ctgov_search.md  ctgov_utils.md  index.md  precision_metrics.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
e156-submission/assets/: CTGov-Search-Complete-JS.html  CTGov-Search-Complete.html  CTGov-Search-Tester.html  CTGov-Strategy-Tester-v2.html  index.html
output/: COMPREHENSIVE_REPORT.md  FINAL_REPORT.md  audit_ledger_report.html  complete_validation.csv  comprehensive_results.csv  comprehensive_validation_report.md  condition_results.csv  detailed_analysis.txt  final_validation.csv  forest_plot_s1_basic.html  forest_plot_s2_area.html  forest_plot_s4_combined.html  forest_plot_therapeutic_area.html  full_test_report.md  full_validation_results.csv  large_scale_validation_report.md  multi_registry_breast_cancer_report.txt  multi_registry_cystic_fibrosis_report.txt  multi_registry_diabetes_report.txt  proper_validation_report.md  recall_summary.csv  rigorous_validation_report.md  search_results.csv  strategy_comparison.csv  strategy_comparison_report.md  strategy_optimization_report.md  strategy_summary.csv  summary_report.md  synonym_expansion_report.txt  validation_report_with_ci.md  validation_results.csv  validation_results_v2.csv  verification_report.md
output/maximum_recall/: MAXIMUM_RECALL_REPORT.md  maximum_recall_results.json
output/strategy_95/: strategy_95_results.json
output/targeted_improvement/: targeted_improvement_results.json
registry_adapters/: __init__.py  anzctr_adapter.py  base_adapter.py  chictr_adapter.py  ctri_adapter.py  drks_adapter.py  jrct_adapter.py
scripts/: aact_integration.py  analyze_missed_trials.py  audit_ledger.py  brand_name_test.py  build_cochrane_gold_standard.py  build_gold_standard.py  complete_validation.sh  comprehensive_validation.py  comprehensive_validation.sh  condition_sensitivity_analysis.py  continuous_gold_standard.py  cross_registry_deduplicator.py  ctgov_search.js  ctgov_search.py  ctgov_search_functions.R  direct_ictrp_validation.py  drug_expander.py  enhanced_generic_recall.py  enhanced_pubmed.py  enhanced_strategy.py  extract_cochrane_data.R  extract_conditions.R  extract_nct_from_cochrane.py  extract_nct_ids.R  final_validation.sh  full_validation.sh  gap_analysis.py  generate_forest_plot.py  ictrp_search.py  improved_recall_validation.py  large_scale_strategy_comparison.py  large_scale_validation.py  ml_strategy_optimizer.py  multi_registry_search.py  natural_language_search.py  non_drug_interventions.py  paper_integration.py  prisma_s_reporter.py  proper_validation.py  prospective_cochrane_validation.py  (+21 more)
tests/: __init__.py  conftest.py  test_aact_integration.py  test_ctgov_advanced.py  test_ctgov_config.py  test_ctgov_search.py  test_ctgov_terms.py  test_ctgov_utils.py  test_ictrp_search.py  test_registry_adapters.py  test_search_methodology.py  test_strategy_optimizer.py
tests/validation_data/: __init__.py  aact_validator.py  cochrane_nct_extraction.json  cochrane_nct_ids.py  cochrane_real_ncts.py  cochrane_validation_ncts.json  ctgov_validation_results.json  expanded_nct_dataset.py
