[metadata]
name = ctgov-search
version = 1.0.0
description = Comprehensive Python toolkit for ClinicalTrials.gov search strategy validation, recall analysis, and multi-registry trial searching
author = CT.gov Search Strategy Project
author_email = research@example.com
license = MIT License - For Research Purposes
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ctgov-search-strategies/ctgov-search
project_urls =
    Documentation = https://github.com/ctgov-search-strategies/ctgov-search#readme
    Repository = https://github.com/ctgov-search-strategies/ctgov-search.git
    Issues = https://github.com/ctgov-search-strategies/ctgov-search/issues
keywords =
    clinical-trials
    clinicaltrials.gov
    systematic-review
    search-strategy
    recall-validation
    cochrane
    meta-analysis
    ICTRP
    MeSH
    RCT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    psycopg2-binary>=2.9.0
    python-dotenv>=1.0.0
include_package_data = True
zip_safe = False
py_modules =
    ctgov_search
    ctgov_config
    ctgov_utils
    ctgov_terms
    ctgov_workflow
    ctgov_fast
    ctgov_advanced
    aact_search
    aact_validation
    aact_full_validation
    aact_debug
    combined_search
    comprehensive_validation
    deep_optimizer
    direct_nct_search
    enhanced_strategy
    esc_cardiology_search
    expanded_validation
    max_recall_strategy
    multi_source_search
    scenario_optimizer
    challenging_conditions

[options.packages.find]
where = .
exclude =
    tests*
    docs*

[options.package_data]
* = *.json, *.csv, *.txt

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    black>=23.0.0
    isort>=5.12.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.0.0
all =
    %(dev)s
    %(docs)s

[options.entry_points]
console_scripts =
    ctgov-search = ctgov_search:main
    ctgov-workflow = ctgov_workflow:main
    ctgov-validate = aact_validation:main

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .mypy_cache,
    .pytest_cache,
    venv,
    .venv
ignore =
    E203,
    E266,
    E501,
    W503,
    W504,
    F403,
    F401
per-file-ignores =
    __init__.py:F401
    tests/*:F401,F811

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True
show_error_codes = True
pretty = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
check_untyped_defs = True

[tool:pytest]
minversion = 7.0
addopts = -ra -q
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
markers =
    requires_aact: mark test as requiring AACT database credentials
    slow: mark test as slow running
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[coverage:run]
source = .
omit =
    tests/*
    setup.py
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
